--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "vertical-timeline-component-for-react": "^1.0.6"
   },
   "scripts": {
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
